prd/pickpro/pickpro-landing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickpro-landing
  namespace: pickpro
  labels:
    app: pickpro-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pickpro-landing
  template:
    metadata:
      labels:
        app: pickpro-landing
        app.kubernetes.io/part-of: soludev-workload
    spec:
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: pickpro-landing
          image: kaiohz/pickpro:pickpro-landing-062e1a51d38064f6c77ecaeb572cdee34510b948
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "96Mi"
              cpu: "100m"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      imagePullSecrets:
        - name: pickpro-docker-secret
