prd/pickpro/pickpro-landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pickpro-landing-ingress
  namespace: pickpro
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: pickpro.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pickpro-landing
                port:
                  number: 80
    - host: www.pickpro.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pickpro-landing
                port:
                  number: 80
